// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when creating a talent 1`] = `
<React.Fragment>
  <EntityImage
    entityType="talent"
    showCarousel={false}
  />
  <EntityHeading>
    New Talent
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <Connect(ReduxForm)
      initialValues={
        Object {
          "lastName": "",
        }
      }
      isEdit={false}
      onCancel={[Function]}
      onSubmit={[Function]}
    />
  </EntityDetailsContainer>
</React.Fragment>
`;

exports[`should render correctly when editing a talent 1`] = `
<React.Fragment>
  <EntityImage
    entityType="talent"
    showCarousel={false}
  />
  <EntityHeading>
    Some Name
  </EntityHeading>
  <EntityDetailsContainer
    type="default"
  >
    <Connect(ReduxForm)
      initialValues={
        Object {
          "lastName": "Some Name",
        }
      }
      isEdit={true}
      onCancel={[Function]}
      onSubmit={[Function]}
    />
  </EntityDetailsContainer>
</React.Fragment>
`;
